%% ============================================================
%% L3 · 诉求台账生命周期 —— 这张图回答:「诉求台账一条记录的一生」
%% 受众: 有基础知识的非开发者也要能读懂(人话为主) + 开发者可定位(括号内代码名)
%% 前置阅读: docs/map/L1-turn-pipeline.mmd + L1-modules.mmd + index.html 的 L0
%%   术语表(诉求台账=demand_ledger,"谁提过什么要求"的记名小账本);
%%   本图钻进 docs/map/L2-node-swap.mmd 里「记账/满足回写」那两格,画清楚
%%   一条 LedgerEntry 从诞生到终态的完整状态机——真相源是
%%   backend/schemas/demand_ledger.py(LedgerEntryStatus + record_demand +
%%   mark_satisfied),两个调用方(单人 graph_adjust.py / 房间 room.py)各自
%%   在自己的入口调用同一套函数,不重复实现第二份状态翻转逻辑。
%% 基于 commit: 57afcef
%% 文字纪律: 不转录函数体;每条迁移箭头都标了证据(代码行或测试名);
%%   mermaid 标签内不用花括号。
%% --------------------------------------------------------------
%% 【锚点表:图中引用 → 代码位置】
%% LedgerEntryStatus 三态枚举        → backend/schemas/demand_ledger.py:58-68
%% LedgerEntry(默认 status=ACTIVE)   → backend/schemas/demand_ledger.py:92-126(默认值 120)
%% record_demand(顶替判定+追加)      → backend/schemas/demand_ledger.py:134-166
%% mark_satisfied(满足回写)          → backend/schemas/demand_ledger.py:169-206
%% active_adjustments(消费切片,只读 ACTIVE) → backend/schemas/demand_ledger.py:214-236
%% ledger_for_display(展示投影,不过滤失效条目) → backend/schemas/demand_ledger.py:239-259
%% resolve_node_swap 的 degrade_tier 语义 → backend/agent/planning/planners/node_swap.py:452-540
%%   (tier1/2=真满足,tier3=近似/SWAP_DEGRADED → node_swap.py:308-313,524-526)
%% 单人调用点(记账+满足回写)          → backend/api/_streams/graph_adjust.py:204-230(成功)/253-264(失败仍记账)
%% 房间调用点(记账+满足回写,归名)     → backend/collab/room.py:649-670(成功)/691-698(失败仍记账)
%% 已下单守门(拦在状态机之前,整段短路) → node_swap_support.py:103-106;graph_adjust.py:162-168;room.py:614-616
%% 房间 TTL 销毁(demand_ledger 随 Room 对象整体回收) → backend/collab/room.py:187,207-210,224-253
%% Room.demand_ledger 字段生命周期注释 → backend/collab/room.py:96-103
%% 单人 demand_ledger 的 SESSION_SCOPED 登记(不随 episode 清空) → backend/agent/graph/state.py(见 test_demand_ledger_registered_session_scoped_and_wired_correctly)
%% --------------------------------------------------------------
%% 测试证据(文件均在 backend/tests/):
%% test_demand_ledger.py
%%   :72  test_record_demand_supersedes_same_member_node_dimension
%%   :85  test_record_demand_supersedes_global_entry_same_member_dimension
%%   :111 test_record_demand_single_user_mode_member_id_none_still_supersedes
%%   :163 test_record_demand_does_not_touch_already_inactive_entries
%%   :275 test_ledger_entry_defaults_to_active_status
%%   :292 test_mark_satisfied_flips_exact_matching_active_entry
%%   :305 test_mark_satisfied_does_not_touch_other_dimension_on_same_node
%%   :333 test_mark_satisfied_does_not_touch_already_inactive_entries
%% test_chat_adjust_endpoint.py(单人)
%%   :152 test_adjust_success_changes_plan_records_satisfied_and_syncs_session_store(断言 199/207)
%%   :230 test_adjust_tier3_degraded_success_keeps_active_not_satisfied_and_narration_carries_advisory(断言 265)
%%   :277 test_adjust_no_alternative_is_business_failure_not_stream_error_but_still_records_ledger(断言 311)
%%   :320 test_alternative_swaps_to_exactly_the_chosen_target_not_the_highest_scoring_peer(断言 349,不记账)
%%   :357 test_dislike_swaps_without_direction_and_does_not_record_ledger(断言 379,不记账)
%%   :387 test_adjust_blocked_after_confirm_plan_unchanged_and_narrated(断言 423,台账未被触碰)
%% test_room_adjust_and_ttl.py(房间)
%%   :98  test_adjust_action_success_records_ledger_with_attribution_and_broadcasts_lock_sequence
%%   :160 test_adjust_action_tier1_satisfied_marks_ledger_satisfied(断言 175)
%%   :185 test_adjust_alternative_swaps_to_exactly_chosen_target_and_does_not_record_ledger(断言 200)
%%   :213 test_adjust_dislike_action_does_not_record_ledger_and_narrates_with_nickname(断言 225)
%%   :243 test_adjust_target_node_not_in_plan_narrates_without_raising(前置检查,不进状态机)
%%   :292 test_room_adjust_blocked_after_confirmed_plan_unchanged_and_narrated(断言 319)
%%   :445 test_sweep_destroys_room_object_and_its_demand_ledger_together
%% ============================================================
stateDiagram-v2
    %% ⤷ 证据： test_ledger_entry_defaults_to_active_status(test_demand_ledger.py：275)、test_adjust_no_alternative_is_business_failure_not_stream_error_but_still_records_ledger(test_chat_adjust_endpoint.py：277,断言311)、test_adjust_action_success_records_ledger_with_attribution_and_broadcasts_lock_sequence(test_room_adjust_and_ttl.py：98)
    [*] --> ACTIVE : 新诉求诞生即生效——record_demand 原样追加,LedgerEntry.status 默认 ACTIVE(demand_ledger.py：120,165)。仅"定向调整(adjust)"动作会走到这里；换菜成功(全部三级)与换菜失败(业务性失败)都会记这一笔,不是只有成功才记

    %% ⤷ 证据： record_demand(demand_ledger.py：134-166,顶替判定155-162) · test_record_demand_supersedes_same_member_node_dimension(test_demand_ledger.py：72)、test_record_demand_supersedes_global_entry_same_member_dimension(：85)、test_record_demand_single_user_mode_member_id_none_still_supersedes(：111)
    ACTIVE --> SUPERSEDED : 同一 (member_id, node_ref, adjustment.dimension) 三元组的新诉求进来——旧条目原地标记「被顶替」,不删除(留痕)；新条目本身作为新的 ACTIVE 追加。跨 member 的矛盾不顶替(共存待调解)；单人模式 member_id 恒为 None,None==None 天然满足同一 member,顶替规则无需特判

    %% ⤷ 证据： mark_satisfied(demand_ledger.py：169-206) · graph_adjust.py：226-230 / room.py：667-670 · test_adjust_success_changes_plan_records_satisfied_and_syncs_session_store(test_chat_adjust_endpoint.py：152,断言199/207)、test_adjust_action_tier1_satisfied_marks_ledger_satisfied(test_room_adjust_and_ttl.py：160,断言175)、test_mark_satisfied_flips_exact_matching_active_entry(test_demand_ledger.py：292)
    ACTIVE --> SATISFIED : 换菜成功且 degrade_tier∈(1,2)——resolve_node_swap 命中「同子类满足」或「同大类满足」,调整谓词被真实满足(不是近似)；消费方在此时才调 mark_satisfied,把刚记的那一条精确翻转(按同一三元组定位,不牵连同节点上其它维度的诉求)

    %% ⤷ 证据： RoomManager.sweep_expired_rooms/delete_room(room.py：187,207-210,224-253) · test_sweep_destroys_room_object_and_its_demand_ledger_together(test_room_adjust_and_ttl.py：445)
    ACTIVE --> [*] : 【仅房间底座】房间 TTL 空闲 50 分钟(且无在线连接)被惰性清扫——Room 对象连同 demand_ledger 整个从内存字典弹出,这不是状态翻转,是外部生命周期终结,与 SUPERSEDED/SATISFIED 两个终态并列的第三种"死法"
    SUPERSEDED --> [*] : 同上,房间销毁一并回收(单人 demand_ledger 无此路径,随 checkpoint 存活,详见下方注解)
    SATISFIED --> [*] : 同上,房间销毁一并回收

    note right of ACTIVE
        近似满足(tier3 · SWAP_DEGRADED)不算「真满足」,诉求保持 ACTIVE、不升级 SATISFIED。
        证据: test_adjust_tier3_degraded_success_keeps_active_not_satisfied_and_narration_carries_advisory
        (test_chat_adjust_endpoint.py:230,断言265)
        --
        点踩(dislike)/具名备选(alternative)是"选定"不是"诉求"——从不创建条目,不进这台状态机。
        证据: test_dislike_swaps_without_direction_and_does_not_record_ledger(:357,断言379)、
        test_alternative_swaps_to_exactly_the_chosen_target_not_the_highest_scoring_peer(:320,断言349)、
        test_adjust_dislike_action_does_not_record_ledger_and_narrates_with_nickname(房间,:213,断言225)、
        test_adjust_alternative_swaps_to_exactly_chosen_target_and_does_not_record_ledger(房间,:185,断言200)
        --
        已下单守门(确认后)拦在状态机之前,整段短路,连 record_demand 都不会被调用。
        证据: test_adjust_blocked_after_confirm_plan_unchanged_and_narrated(:387,断言423)、
        test_room_adjust_blocked_after_confirmed_plan_unchanged_and_narrated(房间,:292,断言319)
        --
        节点定位失败(target_kind 找不到这个 node_id,通常是并发下节点刚被换掉)同样拦在状态机之前——
        房间侧降级为告知、不触碰台账(test_adjust_target_node_not_in_plan_narrates_without_raising,:243);
        单人侧则是契约违反直接抛异常(见 L2 图 LOCATE_FAIL 分支),同样不到 record_demand 这一步。
        这与"节点没了"是两回事——本状态机没有第四态表达"entry 指向的节点后来被换掉":
        一条 ACTIVE 记录一旦记下,其 node_ref 永远指向记账当时的那个节点 id;若那个节点后来被
        另一次操作换掉,这条记录不会被降级/清除/标记,只是不再被任何未来的
        active_adjustments(node_ref=...) 查询命中(因为查询用的是新节点的 id),变成事实上的死信,
        永远停留在 ACTIVE、永远显示在台账面板里。这不是遗漏测试,而是当前代码确实没有为这个
        场景写状态迁移(详见随附报告「我不确定的箭头」)。
    end note

    note right of SUPERSEDED
        终态:record_demand 明确只翻转当前 ACTIVE 条目,不会再动已失效条目。
        证据: test_record_demand_does_not_touch_already_inactive_entries(test_demand_ledger.py:163)
    end note

    note right of SATISFIED
        终态:mark_satisfied 同样不触碰已失效条目("复活"不成立)。
        证据: test_mark_satisfied_does_not_touch_already_inactive_entries(test_demand_ledger.py:333)
        --
        单人 demand_ledger 登记为 SESSION_SCOPED,reset_for_new_episode 不清空它,
        随 LangGraph checkpoint 存活——本仓库业务代码里没有找到显式销毁单人台账的路径
        (与房间侧 TTL 销毁形成对比,见上方 ACTIVE→[*] 注解)。
    end note
